# nomad-uibk-image

./: .gitignore  Dockerfile  HowTo.md  README.md  constraints.txt  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nginx_base_conf  nginx_https.conf  nomad.yaml
