[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.4.0",
  "setuptools",
  "imageio",
]

[project.urls]
repository = "https://github.com/Thin-Layers-Technology-Innsbruck/nomad-uibk-image"

[project.optional-dependencies]
plugins = [
  "nomad-measurements>=1.3.4",
  "nomad-schema-plugin-run>=1.0.1",
  "nomad-schema-plugin-simulation-workflow>=1.0.1",
  "nomad-uibk-plugin @ git+https://github.com/Thin-Layers-Technology-Innsbruck/nomad-UIBK-plugin.git@OrganizeDependencies",
  "pynxtools==0.12.0",
  "pynxtools-apm>=0.4.2",
  "nomad-pvcomb @ git+https://codebase.helmholtz.cloud/pvcomb/nomad-pvcomb.git@develop",
]
jupyter = [
  "voila",
  "jupyterhub<5.0.0",
  "jupyterlab_server>=2.27.1,<3",
]
gpu-action = []
cpu-action = [
  "nomad-uibk-plugin[cpu-action] @ git+https://github.com/Thin-Layers-Technology-Innsbruck/nomad-UIBK-plugin.git@OrganizeDependencies",
]

dev = ["nomad-lab[parsing, infrastructure, dev]>=1.4.0"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/8647/packages/pypi/simple",
]
constraint-dependencies = [ # can be removed once pynxtools removes kikuchipy restriction
  "hyperspy>=1.7.6",
  "pillow<10.1",
]
required-version = ">=0.8.0"
prerelease = "explicit"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]

[tool.setuptools_scm]
fallback_version = "0.0"
